force-app/main/default/objects/Booking__c/fields/Pincode2__c.field-meta.xml
<CustomField>
    <fullName>Pincode2__c</fullName>
    <label>Pincode</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>