force-app/main/default/objects/Booking__c/fields/Pincode3__c.field-meta.xml
<CustomField>
    <fullName>Pincode3__c</fullName>
    <label>Pincode</label>
    <length>6</length>
    <type>Text</type>
</CustomField>