force-app/main/default/objects/Booking__c/fields/Place7__c.field-meta.xml
<CustomField>
    <fullName>Place7__c</fullName>
    <label>Place</label>
    <length>100</length>
    <type>Text</type>
</CustomField>