force-app/main/default/objects/Booking__c/fields/Possession_send__c.field-meta.xml
<CustomField>
    <fullName>Possession_send__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Possession send</label>
    <type>Checkbox</type>
</CustomField>