force-app/main/default/objects/Booking__c/fields/Possession_Send_Date__c.field-meta.xml
<CustomField>
    <fullName>Possession_Send_Date__c</fullName>
    <label>Possession Send Date</label>
    <type>DateTime</type>
</CustomField>