force-app/main/default/objects/Booking__c/fields/Possession_User__c.field-meta.xml
<CustomField>
    <fullName>Possession_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Possession User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Bookings9</relationshipName>
    <type>Lookup</type>
</CustomField>