force-app/main/default/objects/Booking__c/fields/Post_Agreement_Cancellation__c.field-meta.xml
<CustomField>
    <fullName>Post_Agreement_Cancellation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Post Agreement Cancellation</label>
    <type>Checkbox</type>
</CustomField>