force-app/main/default/objects/Booking__c/fields/Private_Terrace__c.field-meta.xml
<CustomField>
    <fullName>Private_Terrace__c</fullName>
    <label>Private Terrace</label>
    <length>20</length>
    <type>Text</type>
</CustomField>