force-app/main/default/objects/Booking__c/fields/Profession1__c.field-meta.xml
<CustomField>
    <fullName>Profession1__c</fullName>
    <label>Profession</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Salaried</fullName>
            </value>
            <value>
                <fullName>Self Employed</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>