force-app/main/default/objects/Booking__c/fields/Project_Company__c.field-meta.xml
<CustomField>
    <fullName>Project_Company__c</fullName>
    <formula>TEXT(Project1__r.Company__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Project Company</label>
    <type>Text</type>
</CustomField>