force-app/main/default/objects/Booking__c/fields/Property_Type_For__c.field-meta.xml
<CustomField>
    <fullName>Property_Type_For__c</fullName>
    <formula>TEXT(Plot__r.Project__r.Project_Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Property Type For</label>
    <type>Text</type>
</CustomField>