force-app/main/default/objects/Booking__c/fields/Proportionate_Common_Area__c.field-meta.xml
<CustomField>
    <fullName>Proportionate_Common_Area__c</fullName>
    <formula>Plot__r.Proportionate_Common_Area__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Proportionate Common Area</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>