force-app/main/default/objects/Booking__c/fields/Purpose_of_Purchase__c.field-meta.xml
<CustomField>
    <fullName>Purpose_of_Purchase__c</fullName>
    <label>Purpose of Purchase</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Living</fullName>
            </value>
            <value>
                <fullName>Investment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>