force-app/main/default/objects/Booking__c/fields/Rate_per_sqftswap__c.field-meta.xml
<CustomField>
    <fullName>Rate_per_sqftswap__c</fullName>
    <label>Rate per sqft</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>