force-app/main/default/objects/Booking__c/fields/Refund__c.field-meta.xml
<CustomField>
    <fullName>Refund__c</fullName>
    <label>Payable Refund Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>