force-app/main/default/objects/Booking__c/fields/Registration_Expected_Date__c.field-meta.xml
<CustomField>
    <fullName>Registration_Expected_Date__c</fullName>
    <label>Registration Expected Date</label>
    <type>Date</type>
</CustomField>