force-app/main/default/objects/Booking__c/fields/Registration_Number__c.field-meta.xml
<CustomField>
    <fullName>Registration_Number__c</fullName>
    <label>Registration Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>