force-app/main/default/objects/Booking__c/fields/Registration_User__c.field-meta.xml
<CustomField>
    <fullName>Registration_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Registration User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>BookingsNaOY</relationshipName>
    <type>Lookup</type>
</CustomField>