force-app/main/default/objects/Booking__c/fields/Relation_Details_Applicant1__c.field-meta.xml
<CustomField>
    <fullName>Relation_Details_Applicant1__c</fullName>
    <label>Relation Details</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>S/o</fullName>
            </value>
            <value>
                <fullName>D/o</fullName>
            </value>
            <value>
                <fullName>W/o</fullName>
            </value>
            <value>
                <fullName>H/o</fullName>
                <isActive>false</isActive>
                <label>H/o</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>