force-app/main/default/objects/Booking__c/fields/Relationship_Manager__c.field-meta.xml
<CustomField>
    <fullName>Relationship_Manager__c</fullName>
    <label>Relationship Manager</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Relationship Manager 1</fullName>
            </value>
            <value>
                <fullName>Relationship Manager 2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>