force-app/main/default/objects/Booking__c/fields/Request_For_Cancellation_Agreement__c.field-meta.xml
<CustomField>
    <fullName>Request_For_Cancellation_Agreement__c</fullName>
    <label>Request For Cancellation Agreement</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>