force-app/main/default/objects/Booking__c/fields/Revenue_to_Company__c.field-meta.xml
<CustomField>
    <fullName>Revenue_to_Company__c</fullName>
    <label>Revenue to Company</label>
    <type>TextArea</type>
</CustomField>