force-app/main/default/objects/Booking__c/fields/RM_Name__c.field-meta.xml
<CustomField>
    <fullName>RM_Name__c</fullName>
    <formula>Project1__r.RM_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>RM Name</label>
    <type>Text</type>
</CustomField>