force-app/main/default/objects/Booking__c/fields/Sale_Agreement_Date__c.field-meta.xml
<CustomField>
    <fullName>Sale_Agreement_Date__c</fullName>
    <label>Sale Agreement Date</label>
    <type>Date</type>
</CustomField>