force-app/main/default/objects/Booking__c/fields/Sale_Deed_Number__c.field-meta.xml
<CustomField>
    <fullName>Sale_Deed_Number__c</fullName>
    <label>Sale Deed Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>