force-app/main/default/objects/Booking__c/fields/Sales_Head__c.field-meta.xml
<CustomField>
    <fullName>Sales_Head__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>lookup for sales head</description>
    <label>Sales Head</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Bookingsyvkr</relationshipName>
    <type>Lookup</type>
</CustomField>