force-app/main/default/objects/Booking__c/fields/salutation_Applicant1__c.field-meta.xml
<CustomField>
    <fullName>salutation_Applicant1__c</fullName>
    <label>salutation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>salutation</valueSetName>
    </valueSet>
</CustomField>