force-app/main/default/objects/Booking__c/fields/Sanction_Letter_Uploaded__c.field-meta.xml
<CustomField>
    <fullName>Sanction_Letter_Uploaded__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sanction Letter Uploaded</label>
    <type>Checkbox</type>
</CustomField>