force-app/main/default/objects/Booking__c/fields/SB_Account__c.field-meta.xml
<CustomField>
    <fullName>SB_Account__c</fullName>
    <label>SB Account</label>
    <length>255</length>
    <type>Text</type>
</CustomField>