force-app/main/default/objects/Booking__c/fields/Second_Applicant_Photo__c.field-meta.xml
<CustomField>
    <fullName>Second_Applicant_Photo__c</fullName>
    <label>Second Applicant Photo</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>