force-app/main/default/objects/Booking__c/fields/Sent_Loan_Document_To_Bank__c.field-meta.xml
<CustomField>
    <fullName>Sent_Loan_Document_To_Bank__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sent Loan Document To Bank</label>
    <type>Checkbox</type>
</CustomField>