force-app/main/default/objects/Booking__c/fields/Share__c.field-meta.xml
<CustomField>
    <fullName>Share__c</fullName>
    <label>Share</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>MHPL</fullName>
            </value>
            <value>
                <fullName>LAND OWNER</fullName>
            </value>
            <value>
                <fullName>Ananth</fullName>
            </value>
            <value>
                <fullName>BTN</fullName>
            </value>
            <value>
                <fullName>MA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>