force-app/main/default/objects/Booking__c/fields/Signature_Of_First_Applicant__c.field-meta.xml
<CustomField>
    <fullName>Signature_Of_First_Applicant__c</fullName>
    <label>Signature Of First Applicant</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>