force-app/main/default/objects/Booking__c/fields/Signature_Of_Second_Applicant__c.field-meta.xml
<CustomField>
    <fullName>Signature_Of_Second_Applicant__c</fullName>
    <label>Signature Of Second Applicant</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>