force-app/main/default/objects/Booking__c/fields/Source_of_refferal__c.field-meta.xml
<CustomField>
    <fullName>Source_of_refferal__c</fullName>
    <label>Source of refferal</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>COMPANY WEBISTE</fullName>
            </value>
            <value>
                <fullName>REFERRAL</fullName>
            </value>
            <value>
                <fullName>AGENT</fullName>
            </value>
            <value>
                <fullName>WALK-IN</fullName>
            </value>
            <value>
                <fullName>DIGITAL MEDIA</fullName>
            </value>
            <value>
                <fullName>HOARDINGS</fullName>
            </value>
            <value>
                <fullName>OTHERS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>