force-app/main/default/objects/Booking__c/fields/Stage__c.field-meta.xml
<CustomField>
    <fullName>Stage__c</fullName>
    <label>Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Reservation</fullName>
                <default>true</default>
                <label>Reservation</label>
            </value>
            <value>
                <fullName>Agreement</fullName>
            </value>
            <value>
                <fullName>Sale Agreement Execution Completed</fullName>
            </value>
            <value>
                <fullName>Demands &amp; Collection</fullName>
            </value>
            <value>
                <fullName>Registration</fullName>
            </value>
            <value>
                <fullName>Registration Completed</fullName>
            </value>
            <value>
                <fullName>Cancellation</fullName>
            </value>
            <value>
                <fullName>Handover</fullName>
                <isActive>false</isActive>
                <label>Handover</label>
            </value>
            <value>
                <fullName>Loan</fullName>
                <isActive>false</isActive>
                <label>Loan</label>
            </value>
            <value>
                <fullName>Maintenance</fullName>
                <isActive>false</isActive>
                <label>Maintenance</label>
            </value>
            <value>
                <fullName>Possession</fullName>
                <isActive>false</isActive>
                <label>Possession</label>
            </value>
            <value>
                <fullName>Swapping</fullName>
                <isActive>false</isActive>
                <label>Swapping</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>