force-app/main/default/objects/Booking__c/fields/Stage_Changed_To_Assignement__c.field-meta.xml
<CustomField>
    <fullName>Stage_Changed_To_Assignement__c</fullName>
    <label>Stage Changed To Assignement</label>
    <length>255</length>
    <type>Text</type>
</CustomField>