force-app/main/default/objects/Booking__c/fields/state1__c.field-meta.xml
<CustomField>
    <fullName>state1__c</fullName>
    <label>state</label>
    <length>255</length>
    <type>Text</type>
</CustomField>