force-app/main/default/objects/Booking__c/fields/State3__c.field-meta.xml
<CustomField>
    <fullName>State3__c</fullName>
    <label>State</label>
    <length>80</length>
    <type>Text</type>
</CustomField>