force-app/main/default/objects/Booking__c/fields/Super_Built_up_area_NE__c.field-meta.xml
<CustomField>
    <fullName>Super_Built_up_area_NE__c</fullName>
    <description>//Plot__r.Super_built_up_area__c</description>
    <formula>Cost_Sheet__r.Super_Built_Up_Area__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Super Built up area</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>