force-app/main/default/objects/Booking__c/fields/Swap_Block__c.field-meta.xml
<CustomField>
    <fullName>Swap_Block__c</fullName>
    <formula>TEXT(Swap_Unit__r.Block__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Swap Block</label>
    <type>Text</type>
</CustomField>