force-app/main/default/objects/Booking__c/fields/Swap_Covered_Park_Parking__c.field-meta.xml
<CustomField>
    <fullName>Swap_Covered_Park_Parking__c</fullName>
    <formula>Swap_Unit__r.Covered_Park_Parking__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Swap Covered Park Parking</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>