force-app/main/default/objects/Booking__c/fields/Swap_Floor__c.field-meta.xml
<CustomField>
    <fullName>Swap_Floor__c</fullName>
    <formula>Text( Swap_Unit__r.Floor__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Swap  Floor</label>
    <type>Text</type>
</CustomField>