force-app/main/default/objects/Booking__c/fields/Swap_Floor_Rise__c.field-meta.xml
<CustomField>
    <fullName>Swap_Floor_Rise__c</fullName>
    <formula>Swap_Unit__r.Floor_Rise__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Swap  Floor Rise</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>