force-app/main/default/objects/Booking__c/fields/Swap_GST__c.field-meta.xml
<CustomField>
    <fullName>Swap_GST__c</fullName>
    <formula>Swap_Unit__r.GST1__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Swap  GST %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>