force-app/main/default/objects/Booking__c/fields/Swap_Other_Charges__c.field-meta.xml
<CustomField>
    <fullName>Swap_Other_Charges__c</fullName>
    <formula>Swap_Unit__r.Other_Charges__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Swap  Other Charges</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>