force-app/main/default/objects/Booking__c/fields/Swap_Price_Per_Sq_Ft__c.field-meta.xml
<CustomField>
    <fullName>Swap_Price_Per_Sq_Ft__c</fullName>
    <formula>Swap_Unit__r.Price_Per_Sq_Ft__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Swap  Price Per Sq.Ft</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>