force-app/main/default/objects/Booking__c/fields/Swap_Super_Built_Up_Area__c.field-meta.xml
<CustomField>
    <fullName>Swap_Super_Built_Up_Area__c</fullName>
    <formula>Swap_Unit__r.Super_built_up_area__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Swap  Super Built-Up Area</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>