force-app/main/default/objects/Booking__c/fields/Swap_TAXES__c.field-meta.xml
<CustomField>
    <fullName>Swap_TAXES__c</fullName>
    <formula>Swap_Unit__r.TAXES__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Swap  TAXES</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>