force-app/main/default/objects/Booking__c/fields/Swap_Tower__c.field-meta.xml
<CustomField>
    <fullName>Swap_Tower__c</fullName>
    <formula>Text(Swap_Unit__r.Tower__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Swap Tower</label>
    <type>Text</type>
</CustomField>