force-app/main/default/objects/Booking__c/fields/TAXES1__c.field-meta.xml
<CustomField>
    <fullName>TAXES1__c</fullName>
    <formula>TAXES__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TAXES</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>