force-app/main/default/objects/Booking__c/fields/Ten_Percent_Collected_Date__c.field-meta.xml
<CustomField>
    <fullName>Ten_Percent_Collected_Date__c</fullName>
    <description>10% payment collected date</description>
    <label>10% Collected Date</label>
    <type>DateTime</type>
</CustomField>