force-app/main/default/objects/Booking__c/fields/Third_Applicant_Name__c.field-meta.xml
<CustomField>
    <fullName>Third_Applicant_Name__c</fullName>
    <label>Third Applicant Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>