force-app/main/default/objects/Booking__c/fields/Third_Applicant_Photo__c.field-meta.xml
<CustomField>
    <fullName>Third_Applicant_Photo__c</fullName>
    <label>Third Applicant Photo</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>