force-app/main/default/objects/Booking__c/fields/Token_Amount__c.field-meta.xml
<CustomField>
    <fullName>Token_Amount__c</fullName>
    <label>Token Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>