force-app/main/default/objects/Booking__c/fields/Total_Interest_Waive_Off__c.field-meta.xml
<CustomField>
    <fullName>Total_Interest_Waive_Off__c</fullName>
    <label>Total Waive Off Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>