force-app/main/default/objects/Booking__c/fields/Total_Maintenance_charges__c.field-meta.xml
<CustomField>
    <fullName>Total_Maintenance_charges__c</fullName>
    <label>Maintenance Charge</label>
    <summarizedField>Additional_Charges__c.Amount__c</summarizedField>
    <summaryFilterItems>
        <field>Additional_Charges__c.Additional_Charge_Type__c</field>
        <operation>equals</operation>
        <value>Maintenance Charges</value>
    </summaryFilterItems>
    <summaryForeignKey>Additional_Charges__c.Booking__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>