force-app/main/default/objects/Booking__c/fields/Total_Premium_Location_Charges__c.field-meta.xml
<CustomField>
    <fullName>Total_Premium_Location_Charges__c</fullName>
    <formula>Super_Built_up_area_NE__c * Premium_Charge__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Premium Location Charges</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>