force-app/main/default/objects/Booking__c/fields/Total_Receipt__c.field-meta.xml
<CustomField>
    <fullName>Total_Receipt__c</fullName>
    <label>Total Receipt</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>