force-app/main/default/objects/Booking__c/fields/Total_received_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_received_Amount__c</fullName>
    <label>Total Received Amount</label>
    <summarizedField>Receipt__c.Total_Received_Amount__c</summarizedField>
    <summaryForeignKey>Receipt__c.Booking__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>