force-app/main/default/objects/Booking__c/fields/Tower__c.field-meta.xml
<CustomField>
    <fullName>Tower__c</fullName>
    <formula>Plot__r.Block1__r.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tower</label>
    <type>Text</type>
</CustomField>