force-app/main/default/objects/Booking__c/fields/TPA__c.field-meta.xml
<CustomField>
    <fullName>TPA__c</fullName>
    <defaultValue>false</defaultValue>
    <label>TPA</label>
    <type>Checkbox</type>
</CustomField>