force-app/main/default/objects/Booking__c/fields/TPA_Agreement_Date__c.field-meta.xml
<CustomField>
    <fullName>TPA_Agreement_Date__c</fullName>
    <label>TPA Agreement Date</label>
    <type>Date</type>
</CustomField>