force-app/main/default/objects/Booking__c/fields/UDS_Area__c.field-meta.xml
<CustomField>
    <fullName>UDS_Area__c</fullName>
    <label>UDS Area</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>